--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -13,5 +13,7 @@ spring:
       discovery:
         enabled: true
         service-id: compute-config-center
+      username: compute
+      password: password123
 
 
