--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,10 @@
 			<artifactId>spring-cloud-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
